fix value rounding in UI